example/grpc-client/deploy/serviceentry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  generation: 1
  labels:
    app: kafka
  name: kafka
  namespace: xa
spec:
  addresses:
    - 127.0.0.1
  endpoints:
    - address: 127.0.0.1
      labels:
        app: kafka
  hosts:
    - kafka
  location: MESH_EXTERNAL
  ports:
    - name: kafka-9092
      number: 9092
      protocol: TCP
  resolution: STATIC


---


# remote https://www.baidu.com


apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-svc-https
spec:
  addresses:
  - 10.10.13.110
  hosts:
    - www.baidu.com
  location: MESH_EXTERNAL
  ports:
    - number: 443
      name: https
      protocol: TLS
  resolution: DNS
